fix: (firefox) remove scrollbar

--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;900&display=swap');
 
+html {
+  scrollbar-width: none;
+}
+
 body {
   font-family: 'Noto Sans KR', sans-serif;
   margin: 0;
@@ -7,7 +11,7 @@ body {
   background: #EEEDEB;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
 }
 
